# requests-crtauth

./: .travis.yml  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
.spotify/pipelines/: master.groovy  release.sh  review.groovy  tox.sh
debian/: changelog  control  pydist-overrides
requests_crtauth/: __init__.py
