[metadata]
name = requests-crtauth
summary = HTTP crtauth authentication using the requests library.
author = Nic Cope
author_email = negz@spotify.com
description-file = README.md
url = https://ghe.spotify.net/negz/requests-crtauth
requires-python = >=2.6
classifier =
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP
    Intended Audience :: System Administrators

[files]
packages =
    requests_crtauth

[global]
setup-hooks =
    pbr.hooks.setup_hook
