[metadata]
name = requests-crtauth
summary = A crtauth authentication plugin for Python Requests.
author = Nic Cope
author_email = negz@spotify.com
description-file = README.md
url = https://github.com/spotify/requests-crtauth
requires-python = >=2.6
classifier =
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP
    Intended Audience :: System Administrators

[files]
packages =
    requests_crtauth

[global]
setup-hooks =
    pbr.hooks.setup_hook
